<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/nav_control"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/control" />

    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/history" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/logout" />

</menu>